--- a/solution/css.css
+++ b/solution/css.css
@@ -17,17 +17,17 @@ h2 {
 }
 
 section div.card {
-  border: solid 5px #000000;
-  background-color: #db609c;
+  border: solid 1px #000000;
+  background-color: #e09d9d;
   margin-right: auto;
   margin-left: auto;
   font-family: Helvetica;
-  color: white;
+  color: #000000;
 }
 section div {
   position: relative;
-  border-left: solid 5px #000000;
-  border-bottom: solid 5px #000000;
+  border-left: solid 1px #000000;
+  border-bottom: solid 1px #000000;
 }
 section div > div:nth-child(1) {
   float: right;
